--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,11 @@
 <mat-sidenav-container>
   <mat-sidenav #sidenav role="navigation">
     <mat-nav-list>
-      <a mat-list-item>
-        <mat-icon class="icon">input</mat-icon>
-        <span class="label">Login</span>
+      <a mat-list-item routerLink="/currency-converter">
+        <span class="label">Currency Converter</span>
       </a>
-      <a mat-list-item>
-        <mat-icon class="icon">home</mat-icon>
-        <span class="label">Home</span>
+      <a mat-list-item routerLink="/about">
+        <span class="label">About</span>
       </a>
     </mat-nav-list>
   </mat-sidenav>
