Updated About page

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,13 +1,17 @@
 <article itemprop="text">
   <p>Angular Currency Converter/Calculator</p>
   <p>Working with latest Angular 8.</p>
-  <h1>Currency Converter/Calculator</h1>
   <p>This project was generated with <a href="https://github.com/angular/angular-cli">Angular CLI</a> version 8.0.6.</p>
+
+  <h1>Currency Converter/Calculator</h1>
+  <p>Used localStorage to limit number of requests to api endpoint.</p>
+  <p>Base conversion currency is EUR (Euro)</p>
+
   <h2>Setup and installation</h2>
   <ol>
     <li>Clone the repository.</li>
     <li>Navigate to root project folder using any command line interface (e.g. Command Prompt on Windows).</li>
-    <li>Run npm install to install packages.</li>
+    <li>Run <code>npm install</code> to install packages.</li>
     <li>Run development server.</li>
   </ol>
   <h2>Development server</h2>
