--- a/src/app/currency-converter/components/currency-converter/currency-converter.component.scss
+++ b/src/app/currency-converter/components/currency-converter/currency-converter.component.scss
@@ -1,4 +1,4 @@
-.converter-card {
+.converter-container {
   margin: 5%;
   padding: 25px;
 
@@ -9,8 +9,4 @@
   .reverse-btn:hover {
       border: 1px solid;
   }
-}
-
-.uppercase {
-  text-transform: uppercase;
 }
