--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,4 +2,19 @@
 
 body {
   margin: 0;
+  padding: 0;
+}
+
+.m-5 {
+  margin: 5%;
+}
+.my-5 {
+  margin: 5%;
+}
+
+.p-25 {
+    padding: 25px;
+}
+.py-25 {
+  padding: 25px;
 }
